[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/artFrame.png" type="Texture" id=1]
[ext_resource path="res://Text.tscn" type="PackedScene" id=2]
[ext_resource path="res://antkin.png" type="Texture" id=3]
[ext_resource path="res://Sprites/EvolveFrom.png" type="Texture" id=4]
[ext_resource path="res://Sprites/EvolveTo.png" type="Texture" id=5]
[ext_resource path="res://Card.gd" type="Script" id=6]
[ext_resource path="res://Sprites/Att.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Def.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Hp.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.984314, 0.956863, 0.94902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="Theme" id=2]
Panel/styles/panel = SubResource( 1 )

[node name="Card" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_horizontal_guides_": [ 201.0 ]
}

[node name="Panel" type="Panel" parent="."]
margin_right = 240.0
margin_bottom = 336.0
theme = SubResource( 2 )

[node name="ArtFrame" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 26.0
margin_right = 120.0
margin_bottom = 111.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="ArtFrame"]

[node name="Name" parent="." instance=ExtResource( 2 )]
margin_left = 117.0
margin_top = 6.0
margin_right = 197.0
margin_bottom = 14.0
rect_scale = Vector2( 2, 2 )
text = "EXAMPLE CARD"
centered = true

[node name="HpIcon" type="TextureRect" parent="."]
margin_left = 204.0
margin_top = 310.0
margin_right = 213.0
margin_bottom = 319.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Hp" parent="." instance=ExtResource( 2 )]
margin_left = 220.0
margin_top = 312.0
margin_right = 227.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "1"

[node name="DefIcon" type="TextureRect" parent="."]
margin_left = 175.0
margin_top = 310.0
margin_right = 184.0
margin_bottom = 319.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Def" parent="." instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 312.0
margin_right = 199.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "1"

[node name="AttIcon" type="TextureRect" parent="."]
margin_left = 146.0
margin_top = 310.0
margin_right = 155.0
margin_bottom = 319.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Att" parent="." instance=ExtResource( 2 )]
margin_left = 161.0
margin_top = 312.0
margin_right = 168.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
text = "1"

[node name="CostIcon" type="TextureRect" parent="."]
margin_left = 195.0
margin_top = 35.0
margin_right = 204.0
margin_bottom = 44.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Cost" parent="." instance=ExtResource( 2 )]
margin_left = 212.0
margin_top = 37.0
margin_right = 219.0
margin_bottom = 45.0
rect_scale = Vector2( 2, 2 )
text = "1"

[node name="Flavor" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 5.0
margin_top = 321.0
margin_right = 145.0
margin_bottom = 329.0
text = "...they're everywhere! "

[node name="From" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 198.0
margin_right = 46.0
margin_bottom = 210.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="Text" parent="From" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 2.0
margin_right = 92.0
margin_bottom = 10.0
text = "evolves into"

[node name="To" type="TextureRect" parent="."]
margin_left = 118.0
margin_top = 197.0
margin_right = 158.0
margin_bottom = 210.0
rect_scale = Vector2( 1.4, 1.2 )
texture = ExtResource( 4 )

[node name="Text" parent="To" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 3.0
margin_right = 97.0
margin_bottom = 11.0
text = "evolves from"

[node name="Sigs" type="Control" parent="."]
margin_left = -1.0
margin_right = 39.0
margin_bottom = 40.0

[node name="Sig1" type="TextureRect" parent="Sigs"]
margin_left = 12.0
margin_top = 215.0
margin_right = 52.0
margin_bottom = 229.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Text" parent="Sigs/Sig1" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 9.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Example sigil"

[node name="Description" parent="Sigs/Sig1" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 14.4444
margin_right = 249.889
margin_bottom = 22.4444
text = "transfers sigils to other cards for one"

[node name="Description2" parent="Sigs/Sig1" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 23.3333
margin_right = 46.8889
margin_bottom = 31.3333
text = "turn"

[node name="Sigs" type="Control" parent="Sigs"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Sig2" type="TextureRect" parent="Sigs/Sigs"]
margin_left = 12.0
margin_top = 230.0
margin_right = 52.0
margin_bottom = 244.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Text" parent="Sigs/Sigs/Sig2" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 9.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Example sigil"

[node name="Description3" parent="Sigs/Sigs/Sig2" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 14.4444
margin_right = 226.889
margin_bottom = 22.4444
text = "does a backflip, snaps the bad guys"

[node name="Description4" parent="Sigs/Sigs/Sig2" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 23.3333
margin_right = 153.889
margin_bottom = 31.3333
text = "neck and saves the day"

[node name="Sig3" type="TextureRect" parent="Sigs/Sigs"]
margin_left = 12.0
margin_top = 244.0
margin_right = 52.0
margin_bottom = 258.0
rect_scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="Text" parent="Sigs/Sigs/Sig3" instance=ExtResource( 2 )]
margin_left = 18.0
margin_top = 1.0
margin_right = 94.0
margin_bottom = 9.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Example sigil"

[node name="Description3" parent="Sigs/Sigs/Sig3" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 14.4444
margin_right = 237.889
margin_bottom = 22.4444
text = "if this card is on your side, play your"

[node name="Description4" parent="Sigs/Sigs/Sig3" instance=ExtResource( 2 )]
visible = false
modulate = Color( 1, 1, 1, 0.513726 )
margin_left = 18.8889
margin_top = 23.3333
margin_right = 94.8889
margin_bottom = 31.3333
text = "mom for free"
